[gd_scene load_steps=15 format=2]

[ext_resource path="res://ui/lose-menu/lose-menu.gd" type="Script" id=1]
[ext_resource path="res://assets/ButtonsV3/Input.png" type="Texture" id=2]
[ext_resource path="res://assets/ButtonsV3/ButtonUp.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://assets/VT323/VT323-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/ButtonsV3/ButtonDown.png" type="Texture" id=6]
[ext_resource path="res://ui/sound-interface/sound-interface.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 256
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 512, 128 )
modulate_color = Color( 0.862745, 0.862745, 0.862745, 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 512, 128 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 128
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=7]
resource_name = "wait"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Control/CenterContainer/VBox/VBoxContainer/SubmitScore/CenterContainer/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ".", "..", "...", "..." ]
}

[node name="LoseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
modulate = Color( 0.215686, 0.215686, 0.215686, 0.556863 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.999348, 1 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Control/CenterContainer"]
margin_left = 104.0
margin_top = 45.0
margin_right = 616.0
margin_bottom = 1234.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Control/CenterContainer/VBox"]
margin_right = 512.0
margin_bottom = 260.0
grow_horizontal = 2
size_flags_horizontal = 7
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "24"
align = 1
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer/VBox"]
margin_top = 292.0
margin_right = 512.0
margin_bottom = 629.0
size_flags_horizontal = 7
custom_constants/separation = 16
alignment = 1

[node name="Name" type="LineEdit" parent="Control/CenterContainer/VBox/VBoxContainer"]
margin_right = 512.0
margin_bottom = 65.0
rect_min_size = Vector2( 200, 50 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/selection_color = Color( 0.392157, 0.392157, 0.392157, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
max_length = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="SubmitScore" type="TextureButton" parent="Control/CenterContainer/VBox/VBoxContainer"]
margin_top = 81.0
margin_right = 512.0
margin_bottom = 337.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control/CenterContainer/VBox/VBoxContainer/SubmitScore"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/CenterContainer/VBox/VBoxContainer/SubmitScore/CenterContainer"]
margin_left = 35.0
margin_top = 95.0
margin_right = 477.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Submit your score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control/CenterContainer/VBox"]
margin_top = 661.0
margin_right = 512.0
margin_bottom = 1189.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer/VBox/CenterContainer"]
margin_right = 512.0
margin_bottom = 528.0
custom_constants/separation = 16

[node name="Restart" type="TextureButton" parent="Control/CenterContainer/VBox/CenterContainer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 256.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control/CenterContainer/VBox/CenterContainer/VBoxContainer/Restart"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/CenterContainer/VBox/CenterContainer/VBoxContainer/Restart/CenterContainer"]
margin_left = 77.0
margin_top = 63.0
margin_right = 434.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="TextureButton" parent="Control/CenterContainer/VBox/CenterContainer/VBoxContainer"]
margin_top = 272.0
margin_right = 512.0
margin_bottom = 528.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control/CenterContainer/VBox/CenterContainer/VBoxContainer/MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/CenterContainer/VBox/CenterContainer/VBoxContainer/MainMenu/CenterContainer"]
margin_left = 154.0
margin_top = 63.0
margin_right = 358.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" parent="Control" instance=ExtResource( 7 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/wait = SubResource( 7 )

[connection signal="pressed" from="Control/CenterContainer/VBox/VBoxContainer/SubmitScore" to="." method="_on_SubmitScore_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBox/CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBox/CenterContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
